# mc-mahon

./: .gitignore  Cargo.toml  Dockerfile  README.md  docker-compose.yml  env.toml.example
src/: config.rs  main.rs
src/adapters_primary/: websocket.rs
src/adapters_secondary/: mod.rs
src/adapters_secondary/chat/: api.rs  mod.rs  test.rs
src/adapters_secondary/fight/: random.rs
src/domain/: dto.rs  fight.rs  mod.rs
