[package]
name = "hexcord"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.12"
job_scheduler = "*"
once_cell = "*"
config = "*"
surf = "*"
serde_json = "1.0.64"
async-std = "*"
anyhow = "1.0.40"
serde = "1.0.125"
tokio = {features = ["full"], version = "1.5"}
bastion = { git = "https://github.com/bastion-rs/bastion" }
rand = "0.8.3"
tracing = "0.1.25"
tracing-subscriber = "0.2.17"

[dependencies.serenity]
default-features = false
features = [
    "builder",
    "client",
    "framework",
    "gateway",
    "http",
    "model",
    "standard_framework",
    "utils",
    "rustls_backend",
    "cache",
]
version = "0.8"
